support images and fix bugs in TextRow.vue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cv-weifan-vue3",
+  "name": "cv-dev-vue3",
   "version": "1.0.0",
   "description": "Weifan Wang's CV using Vue 3",
   "type": "module",
